# net

./: .codespellignore  .codespellrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
docs/: P2762.md
etc/: clang-flags.cmake  gcc-flags.cmake
examples/: CMakeLists.txt  client.cpp  demo_algorithm.hpp  demo_http.hpp  demo_scope.hpp  demo_stream.hpp  demo_task.hpp  empty.cpp  http-munich.cpp  http-warwick.cpp  memory-stream.cpp  munich.cpp  populate-postgres.cpp  postgres-talk.cpp  postgres.cpp  postgres.txt  print_completions.hpp  server.cpp  sync_run.hpp  taps.cpp  task.cpp
examples/data/: index-munich.html
include/beman/net/: net.hpp
include/beman/net/detail/: basic_socket.hpp  basic_socket_acceptor.hpp  basic_stream_socket.hpp  buffer.hpp  container.hpp  context_base.hpp  endpoint.hpp  event_type.hpp  execution.hpp  get_io_handle.hpp  get_scope_token.hpp  initiate.hpp  internet.hpp  into_expected.hpp  io_context.hpp  io_context_scheduler.hpp  iocp_context.hpp  kqueue_context.hpp  listen.hpp  local_endpoint.hpp  merge_completion_signatures.hpp  native_handle.hpp  netfwd.hpp  operations.hpp  platform.hpp  poll_context.hpp  preconnection.hpp  remote_endpoint.hpp  rendezvous.hpp  repeat_effect_until.hpp  scope.hpp  security_props.hpp  sender.hpp  socket_base.hpp  task.hpp  transport_preference.hpp  transport_props.hpp  uring_context.hpp
src/beman/net/: CMakeLists.txt  net.cpp
tests/beman/net/: CMakeLists.txt  sorted_list.test.cpp
